--- a/count_marker_gene_GO.Rmd
+++ b/count_marker_gene_GO.Rmd
@@ -5,12 +5,15 @@ date: "2023-01-26"
 ---
 事前準備
 ```{r}
+library(RColorBrewer)
 curdir <- "~/Labolatory/JST_Mouse_Human/Tabula/Integration"
+
 # renv::restore()
 setwd(curdir)
 library(here)
 set_here(curdir)
 source("run_seurat_GO_analysis.R")
+source("count_marker_gene_GO.R")
 ```
 
 グローバル変数
@@ -26,36 +29,24 @@ types <- c("shared", "Hs_only") # + , "No_homology_info"
 ```
 
 ```{r}
-go_analysis <- function(marker.genes, taxon.id){
- if(length(marker.genes) > 0){
-    rba_panther_enrich(marker.genes, taxon.id, BP, test_type = test_type,
-                       cutoff = cutoff) -> marker.result
-    write.table(marker.result$result, file = outfile,
-                quote = F, row.names = F, sep="\t")
-  }else{
-    header %>%
-      write(file = outfile)
-  } 
-}
-```
-
-```{r}
 # input <- "Liver"
-organs <- c("Bladder", "Bone_Marrow", "Fat", "Heart", "Kidney", "Large_Intestine",
-            "Lung", "Pancreas", "Skin", "Spleen", "Thymus", "Trachea")
+# organs <- c("Bladder", "Bone_Marrow", "Fat", "Heart", "Kidney", "Large_Intestine",
+#             "Liver", "Lung", "Muscle", "Pancreas", "Skin", "Spleen", "Thymus", "Trachea")
+organs <- c("Muscle")
 for(input in organs){
     outdir <- paste(curdir, input, sep = "/")
     paste(outdir, "PANTHER/Hs_shared-only", sep = "/") %>%
       dir.create()
     
-    read_marker_gene_list("Hs", "_") %>%
+    read_marker_gene_list("Hs", input, "_") %>%
       select(cluster) %>%
       distinct %>%
       unlist %>%
       as.numeric -> Hs_all
     for(clstr in Hs_all){
         paste(outdir, "/Marker_gene/",
-              "Hs_Mm_", input, ".seurat_integrate.cluster_", clstr, ".homology.tsv",
+              "Hs_Mm_", input,
+              ".seurat_integrate.cluster_", clstr, ".homology.tsv",
               sep = "") %>%
           read_tsv(show_col_types = FALSE) -> marker
         
@@ -78,3 +69,98 @@ for(input in organs){
 }
 
 ```
+integrate data from the result of GO analysis
+```{r}
+label.share <- c("Both", "Hs_only", "shared")
+labelcolors <- colorRampPalette(brewer.pal(length(label.share),
+                                           "Set2"))(length(label.share))
+names(labelcolors) <- c("Both", "Hs_only", "shared")
+```
+
+```{r}
+for(input in organs){
+  outdir <- paste(curdir, input, sep = "/")
+  read_marker_gene_list("Hs", input, "_") %>%
+        select(cluster) %>%
+        distinct %>%
+        unlist %>%
+        as.numeric -> Hs_all
+  
+  for(clstr in Hs_all){
+    print(paste(input, clstr))
+    # ファイル読み込み
+    merged_shared_only(input, clstr) -> merged_table
+    if(dim(merged_table)[1] > 0){
+        merged_table %>%
+          ggplot(aes(x = GO_short, y = fdr_log, fill = group)) +
+          geom_bar(stat = "identity") +
+          facet_grid(type ~ .) +
+          theme_classic() +
+          scale_fill_manual(values = labelcolors) +
+          theme(axis.text.x =
+                    element_text(angle = 90, hjust = 1, vjust = 0.5)) -> p1
+      
+      merged_table %>%
+        group_by(GO_short) %>%
+        select(GO_short) %>%
+        distinct %>%
+        dim -> go_term_num
+      outfile <- paste(outdir, "/PANTHER/Hs_shared-only/Hs_compare_", input,"_ident_",
+                       clstr, "_sharing.png", sep= "")
+      ggsave(outfile, p1, width = go_term_num[1]*0.6+2, height = 14)
+    }
+  }
+}
+```
+```{r}
+input <- "Liver"
+outdir <- paste(curdir, input, sep = "/")
+read_marker_gene_list("Hs", input, "_") %>%
+      select(cluster) %>%
+      distinct %>%
+      unlist %>%
+      as.numeric -> Hs_all
+human_organ <- tibble()
+human_organ.selected <- tibble()
+
+for(clstr in Hs_all){
+    shared.ident <- tibble()
+    read_GOanalysis_result(input, clstr, "shared") -> shared.ident
+    only.ident <- tibble()
+    read_GOanalysis_result(input, clstr, "Hs_only") -> only.ident
+    
+    integrated.shared <- tibble()
+    if(dim(shared.ident)[1] > 0)
+      integrate_species_sharing(shared.ident, only.ident,
+                                "Shared", 50) %>%
+      mutate(cell_label = paste(input, clstr,
+                                sep = "_")) -> integrated.shared
+    
+    integrated.only <- tibble()
+    if(dim(only.ident)[1] > 0)
+      integrate_species_sharing(only.ident, shared.ident,
+                                "Hs_only", 50) %>%
+      mutate(cell_label = paste(input, clstr,
+                                sep = "_")) -> integrated.only
+    
+    bind_rows(integrated.shared, integrated.only) %>%
+      bind_rows(human_organ, .) -> human_organ
+    merged_shared_only(input, clstr, n = 10) %>%
+      select(GO_short) %>%
+      bind_rows(human_organ.selected, .) %>%
+      distinct -> human_organ.selected
+}
+```
+
+```{r}
+human_organ %>%
+    inner_join(human_organ.selected, by = c("GO_short")) %>%
+    filter(fdr_log > 0) %>%
+    ggplot(aes(x = GO_short, y = cell_label, color = group)) +
+    geom_point(size = 4) +
+    theme_bw() +
+    scale_color_manual(values = labelcolors) +
+    theme(axis.text.x =
+              element_text(angle = 90, hjust = 1, vjust = 0.5))
+```
+
